--- a/compreston-site/Cargo.toml
+++ b/compreston-site/Cargo.toml
@@ -11,4 +11,6 @@ shuttle-runtime = "0.12.0"
 rocket = "0.5.0-rc.2"
 shuttle-rocket = "0.12.0"
 tokio = "1.26.0"
-ftp = "3.0.1"
+
+[dependencies.rocket_dyn_templates]
+features = ["tera"]
