init commit to all things axum

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,6 @@ Cargo.lock
 # Just cloning the repo
 serenity/
 # Also just cloning this one
-Rocket/
+axum/
 # No secret leaking allowed
 Secrets.toml
