--- a/compreston-site/Cargo.toml
+++ b/compreston-site/Cargo.toml
@@ -8,9 +8,6 @@ publish = false
 
 [dependencies]
 shuttle-runtime = "0.12.0"
-rocket = "0.5.0-rc.2"
-shuttle-rocket = "0.12.0"
+axum = "0.6.12"
+shuttle-axum = "0.12.0"
 tokio = "1.26.0"
-
-[dependencies.rocket_dyn_templates]
-features = ["tera"]
