--- a/compreston-site/Cargo.toml
+++ b/compreston-site/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 
 [dependencies]
 shuttle-runtime = "0.12.0"
-axum = "0.6.12"
+axum = "0.6.0"
 shuttle-axum = "0.12.0"
 tokio = "1.26.0"
+tower-http = {version = "0.4.0"}
+tracing-subscriber = "0.3.16"
