--- a/compreston-axum/Cargo.toml
+++ b/compreston-axum/Cargo.toml
@@ -11,3 +11,4 @@ tokio = {version = "1.26.0", features = ["full"]}
 tower-http = {version = "0.4.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
+serde = { version = "1.0", features = ["derive"] }
